--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ngx-cookie-service": "^19.1.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
